fixed the overflow bug in advanced

--- a/static/collapsible.css
+++ b/static/collapsible.css
@@ -20,6 +20,6 @@
 .collapsible_content {
   padding: 0 18px;
   max-height: 0;
-  overflow: hidden;
+  overflow: auto;
   transition: max-height 0.2s ease-out;
 }
